[project]
name = "rag-arxiv"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "litellm>=1.81.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88  # default, or set to 120 if you prefer
